# AgriColMap

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  pcl_configure.sh
CPM/: CMakeLists.txt  CPM.cpp  CPM.h  Image.h  ImageIO.h  OpticFlowIO.h  Stochastic.h  main.cpp  plot.cpp
cpd/: CMakeLists.txt
cpd/include/cpd/: affine.hpp  gauss_transform.hpp  normalization.hpp  rigid.hpp  transform.hpp  utils.hpp
include/: CMakeLists.txt
include/uav_ugv_collaboration_module/: CMakeLists.txt  defs.cpp  defs.h  utils.cpp  utils.h
include/uav_ugv_collaboration_module/aligner/: aligner.h
include/uav_ugv_collaboration_module/descriptor/: descriptor.h
include/uav_ugv_collaboration_module/evaluation_tool/: evaluation_tool.h
maps/: README.txt
params/: aligner_maize_params_row1.yaml  aligner_maize_params_row2.yaml  aligner_maize_params_row2_remastered.yaml  aligner_maize_params_row3.yaml  aligner_maize_params_row3_remastered.yaml  aligner_maize_params_row5.yaml  aligner_soybean_params_row3.yaml  aligner_soybean_params_row4.yaml  aligner_soybean_params_row5.yaml  aligner_sugarbeet_10m_params_row3.yaml  aligner_sugarbeet_10m_params_row4.yaml  aligner_sugarbeet_10m_params_row5.yaml  aligner_sugarbeet_20m_params_row3.yaml  aligner_sugarbeet_20m_params_row4.yaml  aligner_sugarbeet_20m_params_row5.yaml  aligner_sunflowers_params_row2.yaml  aligner_sunflowers_params_row4.yaml  aligner_ww_params.yaml  aligner_ww_params_2.yaml  soybean_cpd_comparison_test.sh  soybean_row3_script.sh  soybean_row4_script.sh  soybean_row5_script.sh
params/output/: 20180311-mavic-ugv-ww-eschikon-2_AffineGroundTruth.txt  20180311-mavic-ugv-ww-eschikon_AffineGroundTruth.txt  20180524-mavic-ugv-soybean-eschikon-row3_AffineGroundTruth.txt  20180524-mavic-ugv-soybean-eschikon-row4_AffineGroundTruth.txt  20180524-mavic-ugv-soybean-eschikon-row5_AffineGroundTruth.txt  20180524-mavic-ugv-sugarbeet-eschikon-row3_20m_AffineGroundTruth.txt  20180524-mavic-ugv-sugarbeet-eschikon-row3_AffineGroundTruth.txt  20180524-mavic-ugv-sugarbeet-eschikon-row4_20m_AffineGroundTruth.txt  20180524-mavic-ugv-sugarbeet-eschikon-row4_AffineGroundTruth.txt  20180524-mavic-ugv-sugarbeet-eschikon-row5_20m_AffineGroundTruth.txt  20180524-mavic-ugv-sugarbeet-eschikon-row5_AffineGroundTruth.txt  20180524-mavic-ugv-ww-eschikon-2-AffineGroundTruth.txt  20180524-mavic-ugv-ww-eschikon-AffineGroundTruth.txt  compute_errors.m  registration_results.m  registration_results_full.m  soybean_row3_cpd_comparison.m  soybean_row4_cpd_comparison.m
results/: chiS_traj.eps  chiS_traj.m  chiS_winter_weat_uav-ugv_20180311.txt
src/: CMakeLists.txt  packageDir.h.in
src/environment_model/: CMakeLists.txt  environment_representation.cpp  environment_representation.h
src/evaluation_tool/: CMakeLists.txt
src/evaluation_tool/evaluation_tool/: CMakeLists.txt  evaluation_tool.cpp
src/evaluation_tool/node/: CMakeLists.txt  evaluation_tool_node.cpp
src/evironment_model/: CMakeLists.txt  environment_representation.cpp  environment_representation.h
src/node/: 22may_jesi_nir_calibrated_camera_parameters.txt  22may_jesi_rgb_calibrated_camera_parameters.txt  CMakeLists.txt  comparison_node.cpp  evaluation_node.cpp  file_reader.cpp  file_reader.h  gre_calib.txt  gre_nir_stereo.txt  gre_red_stereo.txt  gre_reg_stereo.txt  gre_rgb_stereo.txt  gre_rgb_stereo_bak.txt  ground_truth_evaluation_node.cpp  nir_calib.txt  pix4d_input_reader.cpp  pix4d_input_reader.h  red_calib.txt  reg_calib.txt  registration_node.cpp  registration_node_test.cpp  rgb_gre_stereo.txt  rgb_nir_stereo.txt  rgb_nir_stereo_back.yml  visualization_node_maize.cpp  visualization_node_soybean.cpp  visualization_node_soybean_init_guess.cpp  visualization_node_sugarbeet_10m.cpp  visualization_node_sugarbeet_20m.cpp  visualization_node_ww.cpp
src/pointcloud/: CMakeLists.txt  environment_representation.cpp  environment_representation.h  pointcloud.cpp  pointcloud.h
src/pointcloud_handler/: CMakeLists.txt  ground_truth_evaluation.cpp  ground_truth_evaluation.h  pointcloud_aligner.cpp  pointcloud_aligner.h  pointcloud_aligner_new.cpp  pointcloud_aligner_new.h  pointcloud_handler.cpp  pointcloud_handler.h
src/visualizer/: CMakeLists.txt  visualizer.cpp  visualizer.h
src_GoICP/: CMakeLists.txt  jly_goicp.h  jly_icp3d.hpp
