<?xml version="1.0"?>
<package format="2">
  <name>uav_ugv_collaboration_module</name>
  <version>0.0.0</version>
  <description>The uav_ugv_collaboration_module package</description>
  <maintainer email="bellisario@todo.todo">bellisario</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>srrg_core</build_depend>

  <exec_depend>srrg_core</exec_depend>

  <export>

  </export>
</package>
